# subsurface-DA-with-generative-models

./: .gitattributes  .gitignore  DataHandling.ipynb  README.md  main.py  main_solve_inverse_problem.py  main_train.py  main_train_GAN.py  main_train_WAE.py  main_train_forward_model.py  main_train_forward_model_FNO3D.py  main_train_forward_model_test_Gabriel.py  main_train_parameter_GAN.py  main_train_preprocessor.py  pyproject.toml  utilities.py
configs/: DeepONet.yml  FNO3D.yml  GAN.yml  UNO.yml  UNet.yml  UNetGAN.yml  WAE.yml  parameter_GAN.yml
main_scripts/: main_diffusion.py  main_inverse.py  main_inverse_POD.py  main_solve_inverse_problem.py  main_test_forward_models.py  main_train_GAN.py  main_train_forward_model.py  main_train_parameter_generator.py  main_train_preprocessor.py
notebooks/: DataHandling.ipynb
src/subsurface_DA_with_generative_models/: metrics.py  model_testing.py  plotting_utils.py  preprocessor.py  teste.py  train_preprocessor.py
trained_models/FNO3D/: config.yml  loss.txt
trained_models/UNO/: config.yml
trained_models/UNet/: config.yml  loss.txt
trained_models/UNetGAN/: config.yml  loss.txt
trained_models/UNetGAN_150/: loss.txt
trained_models/UNetGAN_160/: config.yml
trained_models/parameter_GAN/: config.yml
trained_preprocessors/: dynamic_input_preprocessor_64.pkl  input_preprocessor_32.pkl  input_preprocessor_64.pkl  output_preprocessor_32.pkl  output_preprocessor_64.pkl  preprocessor_32x32.pkl  preprocessor_64.pkl  preprocessor_64_FNO.pkl  preprocessor_64_pressure_out.pkl  preprocessor_64_space_encoding.pkl
(+46 files in other folders)
